--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@langchain/langgraph-sdk": "^0.0.105",
         "@tailwindcss/vite": "^4.1.11",
         "@types/node": "^24.0.14",
         "@types/webspeechapi": "^0.0.29",
