--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@types/node": "^24.0.14",
         "@types/webspeechapi": "^0.0.29",
         "@yudiel/react-qr-scanner": "^2.3.1",
+        "kokoro-js": "^1.2.1",
         "oxlint": "^1.11.0",
         "react": "^19.1.0",
         "react-audio-visualize": "^1.2.0",
