--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@datastructures-js/priority-queue": "^6.3.3",
+        "@huggingface/transformers": "^3.7.2",
         "@langchain/langgraph-sdk": "^0.0.105",
         "@tailwindcss/vite": "^4.1.11",
         "@types/node": "^24.0.14",
         "@types/webspeechapi": "^0.0.29",
         "@yudiel/react-qr-scanner": "^2.3.1",
         "kokoro-js": "^1.2.1",
+        "onnxruntime-web": "^1.22.0",
         "oxlint": "^1.11.0",
         "react": "^19.1.0",
         "react-audio-visualize": "^1.2.0",
         "react-dom": "^19.1.0",
         "react-markdown": "^10.1.0",
-        "tailwindcss": "^4.1.11"
+        "tailwindcss": "^4.1.11",
+        "threads": "^1.7.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.30.1",
