--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "kokoro-js": "^1.2.1",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
+        "react-icons": "^5.5.0",
         "react-markdown": "^10.1.0",
         "tailwindcss": "^4.1.12"
     },
