--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-VITE_API_URL="http://localhost:8003/api/v1/invoke"
-VITE_STATIC_URL="http://localhost:8003/static/images/"
+VITE_API_URL="https://museum.share.zrok.io/api/v1/invoke"
+VITE_STATIC_URL="https://museum.share.zrok.io/static/images/"
