修复 deployment bug

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-VITE_API_URL="https://museum.share.zrok.io/api/v1/invoke"
+VITE_API_URL="wss://museum.share.zrok.io/api/v1/invoke"
 VITE_STATIC_URL="https://museum.share.zrok.io/static/images/"
